# QuickBaluchon

./: .gitignore  CMakeLists.txt  CommandeLineNote.txt  README.md  bddFun.c  bddFun.h  crypt.c  crypt.h  curlfun.c  curlfun.h  curlprocess.c  curlprocess.h  date.c  date.h  devNot.txt  exec.app  folderFun.c  folderFun.h  index.html  index.php  key.c  key.h  main.c  myQrCodeFunction.c  myQrCodeFunction.h  pixel.c  pngfuncs.c  pngfuncs.h  qrInt.c  qrInt.h  qrSurface.c  qrcodegen.h  qrcodeprocess.c  quickbaluchon  quickbaluchon.app  regex.php  reserv.txt  scritp.js  sendJson.app  sendJson2.app  (+6 more)
ReadMyCSV/: a.out  bddFun.c  bddFun.h  erro.c  erro.h  exec.app  folderFun.c  main.c  test.csv  test2.csv  test3.csv
ReadMyCSV/treatment/: test.csv  test2.csv  test3.csv
ReadMyCSV/untreatedCsv/: test.csv  test2.csv  test3.csv
USERs/delete/: delete.php
USERs/functions/: functions.php
USERs/post/: update.php
app/: Makefile  test.csv  toti.csv  toto.csv  tututu1.csv
app/exe/: kamaji  main
app/inc/: crypt.h  curlprocess.h  import_glade.h  sendcsv.h
app/src/: crypt.c  curlprocess.c  import_glade.c  main.c  sendcsv.c  signInF.c
appWebClientPa/: scritp.js
appWebClientPa/vujsTest/: home.php  signIn.php
bills/delete/: delete.php
bills/functions/: functions.php
bills/get/: bill.php  list.php
bills/post/: creat.php  update.php
chckFnctns/: chckFnctns.php
checkDeliverys/delete/: delete.php
checkDeliverys/functions/: functions.php
checkDeliverys/get/: checkDelivery.php  list.php
checkDeliverys/post/: creat.php
colis/delete/: delete.php
colis/functions/: functions.php
colis/get/: colis.php  getValue.php  list.php
colis/post/: creat.php  update.php
css/: index.css
customerRates/delete/: delete.php
customerRates/functions/: functions.php
customerRates/get/: customerRate.php  list.php
customerRates/post/: creat.php  update.php
deliveryObjectifs/delete/: delete.php
deliveryObjectifs/functions/: functions.php
deliveryObjectifs/get/: deliveryObjecctif.php  list.php
deliveryObjectifs/post/: creat.php  update.php
deliveryRates/delete/: delete.php
deliveryRates/functions/: functions.php
deliveryRates/get/: deliveryRate.php  list.php
deliveryRates/post/: creat.php  update.php
deliverys/delete/: delete.php
deliverys/functions/: functions.php
deliverys/get/: delivery.php  list.php
deliverys/post/: creat.php  update.php
deposits/delete/: delete.php
deposits/functions/: functions.php
deposits/get/: deposit.php  list.php
deposits/post/: creat.php  update.php
exe/: main
frontFolder/: home.php  index.php
genFdr/: genFdr.php
getByAttribut/: getByAttribut.php
home/: homeAdmin.php  homeDriver.php  homeUser.php
licences/: lincenceScript.php
listfnctns/: listfnctns.php
put/: prg.c  put.php  upf.php
qrCodeFolder/: pixel.h  qrInt.c  qrSurface.h
readMeLicence/: README.md
serveur/: logIn.app  main.c
session/: destroySession.php  fakeConnect.php
signIn/: signIn.php
signOut/: signOut.php
signUp/: clientForm.php  driverForm.php  signUp.php  signUpClient.php  signUpDriver.php
src/: main.c  qrInt.c  qrInt.h  qrSurface.c  qrSurface.h
stock/: index.php  note.text  pixel.h  qrInt.h  qrSurface.h  qrcodeprocess.h
treatment/: test.csv  test2.csv  test3.csv
ui/: ui.glade~
untreatedCsv/: test.csv  test2.csv  test3.csv
users/: search.php
utils/: dataBase.php  db.php  env.php
utls/: mail.php  utls.php
validationMail/: validatioNmail.php
vehicules/: functions.php
(+61 files in other folders)
